# take_mut

./: Cargo.toml  README.md
src/: abort_on_panic.rs  exit_on_panic.rs  lib.rs  scoped.rs
