[package]
name = "take_mut"
version = "0.1.0"
authors = ["Sgeo <sgeoster@gmail.com>"]
license = "MIT"
homepage = "https://github.com/Sgeo/take_mut"
repository = "https://github.com/Sgeo/take_mut"
description = "Take a T from a &mut T temporarily"
documentation = "http://sgeo.github.io/rustdoc/take_mut/"